--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,12 +1,23 @@
 .home-container{
+  display: flex;
+  flex-direction: column;
   font-size: 22px;
   padding: 10px;
-  background-color: #E5E5E5;
-  color: #FFFFFF;;
+  background-color: #FFFFFF;
+  color: #FFFFFF;
   text-align: center;
 }
 
+.home-container p {
+  font-size: 11px;
+  padding: 10px 51px 29px;
+  line-height: 16,41px;
+  
+}
+
 .home-card{
+  display: flex;
+  flex-direction: column-reverse;
   background: #00285F;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -22,3 +33,18 @@
 .home-image-container svg{
   width: 100%;
 }
+
+
+.btn-content-container{
+  display: flex;
+  flex-direction: column-reverse;
+  padding: 28px 63px;
+  background-color: #EDEDED;;
+  text-align: center;
+  text-align: center;
+  margin: 10px ;
+  border-radius: 10px;
+}
+
+
+
